--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 @media only screen and (max-width: 600px) {
       
 	.contact-desktop{
-     	margin-left:25%;
+     	margin : auto 3%;
      }
 
       .credentials-desktop{
