--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
        font-weight: bold;
        margin-left: -7rem;
         max-width: 800px;
-        padding-top: 25rem;
+        padding-top: 23rem;
           }
   .caption{
         text-align: left;
@@ -133,6 +133,12 @@
     margin-left: 0rem;
     margin-right: 0rem;
   }   
+  .svg{
+    display: inline-block;
+    width: 25.3px;
+    height: 22.45px;
+    overflow: hidden;
+  }
   .visibility{
         visibility: collapse;
       }
