minor ui changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Slab&family=Varela+Round&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -23,8 +23,10 @@
     }
 
     html, body {
-        font-family: 'Montserrat', sans-serif;
-        background-color: #FFFFE0;
+/*        font-family: 'Open Sans', sans-serif;
+*/		font-family: 'Roboto Slab', serif;
+/*		font-family: 'Varela Round', sans-serif;
+*/        background-color: #FFFFE0;
         width: 100%;
     	height: 100%;
     	margin: 0px;
@@ -42,10 +44,7 @@
   
   } 
 
-  	#credentials{
-  		    font-size: 18px;
 
-  	}
   	.leads,.contact{
         font-size: 20px;
        	
@@ -54,7 +53,7 @@
         font-size: 60px;
         font-weight: bold;
         padding-left: 17rem;
-        margin-top: -22rem;
+        margin-top: -19rem;
 
 	}
 
@@ -63,18 +62,32 @@
         padding-left: 10rem;
       }
 
+  	#credentials{
+  		    font-size: 18px;
+        	margin-left: 5rem;
+
+  	}
     #language{
-    	margin-right: -4rem;
-    	padding-right: 15rem;
+    	margin-left: 5rem;
+    	margin-right: -14rem;
+    	/*padding-right: 15rem;*/
 
     }  
-      #profile{
+    #profile{
+        margin-left: 4rem;	
     	line-height: 2.3rem;
-		margin-top: 1rem; 
+		margin-top: 2rem; 
 		padding-right: 5rem;
-   }    
+   }   
+    #contact{
+    	margin-left: 5rem;
+    	margin-right: -6rem;
+    }
+    #skills{
+    	    margin-right: 9rem;
 
       }
+    }
 
  
 /*--------------------------------------------------------------------------------------*/
@@ -111,7 +124,7 @@
        font-weight: bold;
        margin-left: -7rem;
         max-width: 800px;
-        padding-top: 23rem;
+        padding-top: 20rem;
           }
   .caption{
         text-align: left;
@@ -124,9 +137,14 @@
   	font-size: 40px;
   	font-weight: 200px;
   	color: sienna;
-  	padding-top: 10px;
+  	padding-top: 40px;
   }
-
+  .display4-addon{
+  	font-size: 40px;
+  	font-weight: 200px;
+  	color: sienna;
+  	padding-top: 15px;
+  }
  
 
          
@@ -161,7 +179,7 @@
 
      <div class="row">
        <div class="col-lg-6">
-        <p class="display4" id="profile">Profile</p>
+        <p class=" display4 display4-addon" id="profile">Profile</p>
         <p class="leads special-profile" id="profile">
             I am a Certified Professional Trainer in Blockchain, Cloud and Scrum. I have been fortunate enough to widespread my skills and accomplishments on the latest technologies to the upcoming talent. I have been a public speaker, a trainer and a guide to the
           <nobr>road-maps</nobr> of most <nobr>in-demand</nobr> technologies.
@@ -192,7 +210,7 @@
     <p class="leads"  >English | Hindi | Telugu | Odia</p>
     <br>
     <p class="display4">Skills</p>
-    <p class="leads" style="line-height: 2.3rem">Blockchain Technology | Cryptocurrency | Solidity Programming | Ethereum | Agile | Scrum | Project Management | Cloud Computing | Microsoft Azure | Amazon Web Services | Google Cloud Platform | Kubernetes | Terraform
+    <p class="leads" style="line-height: 2.3rem" id="skills">Blockchain Technology | Cryptocurrency | Solidity Programming | Ethereum | Agile | Scrum | Project Management | Cloud Computing | Microsoft Azure | Amazon Web Services | Google Cloud Platform | Kubernetes | Terraform
     </p>
 
   
@@ -235,7 +253,7 @@
      <!-- fourth row -->
 
      <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-6"  id="contact">
           <p class="display4">Contact</p>  
           <a class="contact"><img src="phone.svg" class="svg">&nbsp;&nbsp;&nbsp; +91-90306-42857</a><br>
           <a class="contact" href="mailto:prasanthsahoo45@gmail.com"><img src="email.svg" class="svg">&nbsp;&nbsp; prasanthsahoo45@gmail.com</a> <br>
